base/httpd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
spec:
  selector:
  template:
    spec:
      containers:
        - name: httpd
          image: httpd:2.4.58
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          volumeMounts:
          - name: data
            mountPath: "/usr/local/apache2/htdocs"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: www-data
